--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,10 +3,18 @@
 *{
     padding: 0;
     margin: 0;
+    font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
+    text-decoration: none;
+    outline: none;
+    border: none;
+    text-transform: capitalize;
 }
 
 html{
+    font-size: 62.5%;
+    overflow-x: hidden;
+    scroll-padding-top: 7rem;
     scroll-behavior: smooth;
 }
 
@@ -19,6 +27,7 @@ body{
     overflow: hidden;
     width: 100%;
     height: 100vh;
+    text-align: center;
 }
 
 .left,.right{
@@ -39,6 +48,7 @@ body{
     width: 100%;
 }
 
+/* Navigation Start*/
 .nav{
     display: flex;
     width: 100%;
@@ -148,7 +158,7 @@ body{
 
 /* navigation bar links */
 
-.menu {
+.menu{
     position: fixed;
     top: 0%;
     left: -100%;
@@ -227,6 +237,11 @@ body{
     width: 100%;
 }
 
+/* Navigation End */
+
+
+/* Social Links Start */
+
 .media{
     position: static;
     top: 0;
@@ -284,6 +299,10 @@ figure i{
     pointer-events: none;
 }
 
+/* Social Links End */
+
+
+/* Scroll Bar */
 /* width */
 ::-webkit-scrollbar {
     width: 10px;
@@ -307,6 +326,9 @@ figure i{
   ::-webkit-scrollbar-thumb:hover {
     background: black; 
   }
+
+
+/* Home Page Body Content Start */
 .content-page{
     position: relative;
     float: right;
@@ -395,6 +417,188 @@ figure i{
   .banner3{ 
     animation: slide3 18s linear infinite;
   }
+/* Home Page Body Content End */
+
+/* Labtools Page */
+
+.labtoolsBanner{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+}
+.labtoolsBanner img{
+    width: 50%;
+    transform: none;
+}
+.wrapper h1.home-parallax{
+    position: absolute;
+    bottom: 4%;
+    font-size: 9.5vw;
+    text-transform: uppercase;
+    color: black;
+    font-weight: 700;
+    display: block;
+}
+.labtool_section,.contact_section{
+    position: relative;
+    padding: 60px 0;
+    background-color: #d8d8d8;
+}
+.heading{
+    font-size: 50px;
+    color: black;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+#portfolio .labtool-item {
+    max-width: 26rem;
+    margin-left: auto;
+    margin-right: auto;
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 25px;
+    box-shadow: 0 25px 45px rgba(0, 0, 0, 0.2);
+    border: 1px solid rgba(255, 255, 255, 0.5);
+
+  }
+  #portfolio .labtool-item .labtool-link {
+    position: relative;
+    display: block;
+    margin: 0 auto;
+  }
+  .labtool-link .img-fluid{
+      border-radius: 25px 25px 0 0;
+  }
+  #portfolio .labtool-item .labtool-link .labtool-hover {
+    display: flex;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #2672ffd0;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity ease-in-out 0.25s;
+    border-radius: 25px 25px 0 0;
+  }
+  #portfolio .labtool-item .labtool-link .labtool-hover .labtool-hover-content {
+    font-size: 40px;
+    color: white;
+  }
+  #portfolio .labtool-item .labtool-link:hover .labtool-hover {
+    opacity: 1;
+  }
+  #portfolio .labtool-item .labtool-caption {
+    padding: 1.5rem;
+    text-align: center;
+    background-color: transparent;
+  }
+.labtool-caption .labtool-caption-heading {
+    font-size: 25px;
+    font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-weight: 700;
+    margin-bottom: 0;
+  }
+ 
+  
+  .labtool-modal .modal-dialog {
+    margin: 1rem;
+    max-width: 100%;
+  }
+  .labtool-modal .modal-content {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+    text-align: center;
+    background: rgba(255, 255, 255, 0.452);
+    border-radius: 25px;
+    backdrop-filter: blur(5px);
+    box-shadow: 0 25px 45px rgba(0, 0, 0, 0.1);
+    border: 1px solid rgba(255, 255, 255, 0.5);
+  }
+  .labtool-modal .modal-content h2, .labtool-modal .modal-content .h2 {
+    font-size: 5rem;
+    font-weight: 600;
+    line-height: 3rem;
+    margin: 20px 0;
+  }
+ 
+  .labtool-modal .modal-content p {
+    margin-bottom: 2rem;
+    font-size: 20px;
+  }
+
+  .labtool-modal .modal-content img {
+    margin-bottom: 2rem;
+    width: 70%;
+    border-radius: 5px;
+  }
+  .labtool-modal .close-modal {
+    position: absolute;
+    top: 2.5rem;
+    right: 2.5rem;
+    width: 3rem;
+    height: 3rem;
+    cursor: pointer;
+    background-color: transparent;
+  }
+  .labtool-modal .close-modal:hover {
+    opacity: 0.5;
+  }
+
+/* Contact Page */
+
+  section#contact .section-heading {
+    color: #fff;
+  }
+  section#contact form#contactForm .form-group {
+    margin-bottom: 3.5rem;
+  }
+  section#contact form#contactForm .form-group input,
+  section#contact form#contactForm .form-group textarea {
+    padding: 3.25rem;
+  }
+  section#contact form#contactForm .form-group input.form-control {
+    height: 60px;
+    border-radius: 50px;
+  }
+  section#contact form#contactForm .form-group-textarea {
+    height: 100%;
+}
+section#contact form#contactForm .form-group-textarea textarea {
+    height: 100%;
+    border-radius: 50px;
+    min-height: 10rem;
+  }
+  section#contact form#contactForm p.help-block {
+    margin: 0;
+  }
+  section#contact form#contactForm .form-control:focus {
+    border-color: #2672ff;
+    box-shadow: none;
+  }
+  section#contact form#contactForm ::-webkit-input-placeholder {
+    font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-weight: 700;
+    color: #ced4da;
+    font-size: 20px;
+  }
+
+.btn-contact{
+    padding: 10px 35px;
+    background-color: #2672ff;
+    color: white;
+    font-size: 20px;
+    border-radius: 15px;
+    transition: 0.4s;
+}
+.btn-contact:hover{
+    background-color: #002b7c;
+    color: white;
+}
+
+
+
+/* Footer Start */
 
 .footer{
     background: black;
@@ -439,8 +643,7 @@ figure i{
     font-size: 2rem;
 }
 
-
-
+/* Footer End */
 
 
 
@@ -610,6 +813,9 @@ figure i{
     .header_banner iframe{
         height: 418px;
     }
+    .wrapper h1.home-parallax{
+        bottom: 10%;
+    }
 }
 @media(max-width:990px){
     .content .header_banner{
@@ -618,6 +824,12 @@ figure i{
     .header_banner iframe{
         height: 365px;
         top: 41px;
+    }
+    .wrapper h1.home-parallax{
+        bottom: 7%;
+    }
+    .labtoolsBanner img{
+        width: 70%;
     }
 }
 @media(max-width:824px){
@@ -630,12 +842,28 @@ figure i{
     }
 }
 @media(max-width:768px){
-    
+    .wrapper h1.home-parallax{
+        bottom: 15%;
+    }
+    .labtoolsBanner img{
+        width: 75%;
+    }
+}
+@media(max-width:640px){
+    .wrapper h1.home-parallax{
+        bottom: 25%;
+    }
+    .content-page{
+        width: 90vw;
+    }
 }
 @media(max-width:530px){
     .header_banner iframe{
         height: 250px;
         top: 32px;
+    }
+    .wrapper h1.home-parallax{
+        bottom: 35%;
     }
 }
 @media(max-width:500px){
@@ -671,6 +899,9 @@ figure i{
     }
     .header_banner iframe{
         display: none;
+    }
+    .wrapper h1.home-parallax{
+        bottom: 35%;
     }
 }
 @media(max-width:325px){
